# armerge

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
armerge/: Cargo.toml
armerge-cli/: Cargo.toml
armerge-cli/src/: main.rs
armerge/src/: arbuilder.rs  archives.rs  input_library.rs  lib.rs  merge_error.rs  objects.rs  process_input_error.rs
armerge/src/arbuilder/: common.rs  mac.rs
armerge/src/objects/: builtin_filter.rs  filter_deps.rs  merge.rs  syms.rs  system_filter.rs
src/: arbuilder.rs  archives.rs  input_library.rs  lib.rs  main.rs  merge_error.rs  object_syms.rs  objects.rs  process_input_error.rs
src/arbuilder/: common.rs  mac.rs
src/objects/: builtin_filter.rs  filter_deps.rs  merge.rs  syms.rs  system_filter.rs
