[package]
name = "armerge"
version = "1.4.1"
authors = ["tux3 <barrdetwix@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/tux3/armerge/"
categories = ["command-line-utilities", "development-tools::build-utils"]
description = "Tool to merge and control visibility of static libraries"

[dependencies]
objpoke = "0.3"
structopt = "0.3"
ar = "0.9"
tempdir = "0.3.7"
rand = "0.8"
object = "0.29"
goblin = "0.4"
regex = "1.3.9"
rayon = "1.4.0"
anyhow = { version = "1.0.56", features = ["backtrace"] }

[features]
# EXPERIMENTAL. Uses objpoke instead of objcopy for localizing ELF symbols in-place. Very fast, but not stable for production use.
objpoke_symbols = []
