[package]
name = "armerge"
version = "2.2.1"
authors = ["tux3 <barrdetwix@gmail.com>"]
edition = "2021"
rust-version = "1.74"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/tux3/armerge/"
categories = ["command-line-utilities", "development-tools::build-utils"]
description = "Tool to merge and control visibility of static libraries"

[dependencies]
objpoke = "0.3"
clap = { version = "4.5.30", features = ["derive"] }
ar = "0.9"
tempfile = "3.3.0"
rand = "0.9.2"
object = "0.37.3"
goblin = "0.10.1"
regex = "1.3.9"
rayon = "1.4.0"
thiserror = "2.0.8"
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.14", features = ["env-filter", "local-time"], optional = true }
time = { version = "0.3.11", optional = true }

[[bin]]
name = "armerge"
required-features = ["log_subscriber"]

[features]
default = ["log_subscriber"]
# EXPERIMENTAL. Uses objpoke instead of objcopy for localizing ELF symbols in-place. Very fast, but not stable for production use.
objpoke_symbols = []
log_subscriber = ["dep:tracing-subscriber", "dep:time"]
