[package]
name = "armerge"
version = "2.2.0"
authors = ["tux3 <barrdetwix@gmail.com>"]
edition = "2021"
rust-version = "1.74"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/tux3/armerge/"
categories = ["command-line-utilities", "development-tools::build-utils"]
description = "Tool to merge and control visibility of static libraries"

[dependencies]
objpoke = { git = "https://github.com/dice-group/objpoke", rev = "c43ab668dafcb4bfbd7c16a0dd654ee759d7fbb3" }

tracing = { workspace = true }
regex = { workspace = true }

ar = "0.9"
tempfile = "3.18.0"
rand = "0.9"
object = "0.36.5"
goblin = "0.9.2"
rayon = "1.10.0"
thiserror = "2.0.12"

[features]
# EXPERIMENTAL. Uses objpoke instead of objcopy for localizing ELF symbols in-place. Very fast, but not stable for production use.
objpoke_symbols = []
